tests/baselines/reference/FunctionPropertyAssignments1_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments1_es6.ts(1,11): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments1_es6.ts (1 errors) ====
    var v = { *foo() { } }
              ~
!!! error TS9001: Generators are not currently supported.